# Angust

./: .gitignore  3rdpartylicenses.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  main-BUS4SHVY.js  main-CMTMLT6O.js  main-E6PMDTGM.js  main-NSMVCRNP.js  main-T3WAZQCW.js  main-XGEFDJVG.js  mod.rs  styles-3L3JMSHB.css  styles-54T7QK6K.css  styles-6VDRZILO.css
angust-cli/: mod.rs  (+2 more)
angust-core/: Cargo.toml  README.md
angust-core/src/: lib.rs
angust-core/src/application/: angust_configuration.rs  application.rs  event_loop_proxy.rs  ui_initializer.rs
angust-core/src/application/event_handling/: mod.rs  scrollbar_movement_handler.rs
angust-core/src/application/resource_loader/: configuration_loader.rs  html_loader.rs  path_navigator.rs  stylesheet_loader.rs
angust-core/src/parsing/: mod.rs
angust-core/src/parsing/css/: css_parser.rs  mod.rs  stylesheet_parser.rs
angust-core/src/parsing/directive/: for_parser.rs  if_parser.rs  input_parser.rs  input_scanner.rs  mod.rs  on_click_parser.rs  placeholder_parser.rs
angust-core/src/parsing/directive/input/: input_evaluator.rs  input_parser.rs  input_scanner.rs  input_setter.rs  mod.rs
angust-core/src/parsing/expression/: ast.rs  ast_evaluator.rs  expression.pest  mod.rs
angust-core/src/parsing/html/: component_parser.rs  directive_parser.rs  element_parser.rs  error.rs  html_parser.rs  mod.rs
angust-core/src/rendering/: mod.rs  renderer.rs  ui_manager.rs
angust-core/src/rendering/elements/: button.rs  common_types.rs  container.rs  element.rs  event_propagator.rs  image.rs  mod.rs  styles.rs  text.rs
angust-core/src/rendering/elements/component/: component.rs  component_factory.rs  component_functions.rs  component_state.rs  component_updater.rs  macros.rs  mod.rs  no_state.rs  reactivity.rs  service_container.rs  template_loader.rs  test.rs
angust-core/src/rendering/elements/service/: async_manager.rs  mod.rs  service_registry.rs
angust-core/src/rendering/layout/: effective_size_estimator.rs  mod.rs  size_estimator.rs
angust-core/src/rendering/layout/size_estimation_system/: effective_size_estimator.rs  mod.rs  parent_size_estimator.rs  percentage_size_estimator.rs  size_estimator.rs  text_size_estimator.rs
angust-core/src/rendering/layout/space_allocation_system/: mod.rs
angust-core/src/rendering/rendering_interface/: element_renderer.rs  skia_boundary.rs
angust-core/src/rendering/router/: angust_router.rs  mod.rs  router_component.rs  router_proxy.rs
angust-core/src/window/: mod.rs
crates/angust_cli/: CHANGELOG.md  Cargo.toml  README.md  mod.rs
crates/angust_cli/src/: main.rs
crates/angust_cli/src/commands/: command_configuration.rs  command_dispatcher.rs
crates/angust_cli/src/object_generator/: common.rs  component_generator.rs  service_generator.rs
crates/angust_cli/src/project_creator/: app_directory_creator.rs  configuration_file_creator.rs  core_file_creator.rs  project_creation_manager.rs
crates/angust_cli/src/shared/: utils.rs
crates/angust_core/: CHANGELOG.md  Cargo.toml  README.md
crates/angust_core/src/: lib.rs
crates/angust_core/src/application/: application.rs  event_loop_proxy.rs  mod.rs  ui_initializer.rs
crates/angust_core/src/application/event_handling/: mod.rs
crates/angust_core/src/application/resource_loader/: mod.rs
crates/angust_core/src/parsing/: mod.rs
crates/angust_core/src/parsing/css/: dimension_parser.rs  layout_parser.rs  stylesheet_parser.rs  text_parser.rs
crates/angust_core/src/parsing/directive/: on_click_parser.rs
crates/angust_core/src/parsing/expression/: ast.rs  ast_evaluator.rs  expression_parser.rs  mod.rs
crates/angust_core/src/window/: mod.rs
crates/angust_macros/: Cargo.toml  README.md
crates/angust_macros/src/: lib.rs
(+318 files in other folders)
